src/components/LCD/TimeBox/timeBox.module.scss
.timeBox {
  grid-row: lcd-top;
  grid-column: lcd-right;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: space-between;
}

.amPMContainer {
  height: 23px;
  width: 14px;
  font-size: 6px;
  margin-top: 5px;
  overflow: hidden;
  padding-right: 2px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  user-select: none;

  .amPMBox {
    width: 100%;
  }

  .amPMText {
    text-align: center;
    width: 100%;
    height: 10px;
  }
}

.clockDigit {
  height: 50px;
  padding: 4px 2px;
}

.hidden {
  // color: rgba(0, 0, 0, 0.1);
  color: rgb(210, 210, 190);
}

.visible {
  // color: rgba(0, 0, 0, 0.9);
  color: rgb(24, 24, 22);
}

